# Neural_Net

./: CMakeLists.txt  CMakeSettings.json
include/: net.hpp  trainer.hpp  utils.hpp
src/: Neural_Net.cpp  Neural_Net.h
